--- a/restro-kayang.html
+++ b/restro-kayang.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" ype="text/css" href="restro styles.css" />
+    <link rel="stylesheet" ype="text/css" href="restro-styles.css" />
     <title>restro</title>
   </head>
   <body>
@@ -42,7 +42,7 @@
      <div id class="menu_items">
          <div id class="box5">
             <div>
-                <img src="https://i.pinimg.com/564x/7e/bb/b9/7ebbb98220ee90e8b5c404c4821bfd51.jpg">
+                <img src="https://i.pinimg.com/564x/7e/bb/b9/7ebbb98220ee90e8b5c404c4821bfd51.jpg" alt="food">
             </div>
             <h4> Lontong Mie Sayur</h4>
             <h5> Discover a symphony of taste with our<br>handpicked favorites that promise to delight your...</h5>
@@ -57,7 +57,7 @@
 
         <div id class="box6">
             <div>
-                <img src="https://i.pinimg.com/564x/42/db/c7/42dbc7293673a7a3cc83f703f495c541.jpg">
+                <img src="https://i.pinimg.com/564x/42/db/c7/42dbc7293673a7a3cc83f703f495c541.jpg" alt="food">
             </div>
             <h4> Rendang Sambal Bergoyang</h4>
             <h5> Discover a symphony of taste with our<br>handpicked favorites that promise to delight your...</h5>
@@ -71,7 +71,7 @@
 
         <div id class="box7">
             <div>
-                <img src="https://i.pinimg.com/564x/59/0f/28/590f28bb5facfad9d6ed712ed6b3508b.jpg">
+                <img src="https://i.pinimg.com/564x/59/0f/28/590f28bb5facfad9d6ed712ed6b3508b.jpg" alt="food">
             </div>
             <h4>Ikan Asam Pedas Nasar</h4>
             <h5> Discover a symphony of taste with our<br>handpicked favorites that promise to delight your...</h5>
@@ -85,7 +85,7 @@
         
      <div id class="box8">
         <div>
-            <img src="https://i.pinimg.com/564x/43/01/aa/4301aa5cf4760a5e428d575c099bd9c8.jpg">
+            <img src="https://i.pinimg.com/564x/43/01/aa/4301aa5cf4760a5e428d575c099bd9c8.jpg" alt="food">
         </div>
         <h4>Mie Bikin Sakit</h4>
      <h5> Discover a symphony of taste with our<br>handpicked favorites that promise to delight your...</h5>
@@ -98,7 +98,7 @@
 
       <div id class="box9">
         <div>
-            <img src="https://i.pinimg.com/564x/d0/51/62/d05162e4f22c7b83e4a90013c3cb6b63.jpg">
+            <img src="https://i.pinimg.com/564x/d0/51/62/d05162e4f22c7b83e4a90013c3cb6b63.jpg" alt="food">
         </div>
         <h4> Nasi Goreng Ngebor</h4>
         <h5> Discover a symphony of taste with our<br>handpicked favorites that promise to delight your...</h5>
@@ -111,7 +111,7 @@
 
       <div id class="box10">
         <div>
-          <img src="https://i.pinimg.com/564x/50/30/55/503055ddbe8cfb8aa8bc3a4188438623.jpg">
+          <img src="https://i.pinimg.com/564x/50/30/55/503055ddbe8cfb8aa8bc3a4188438623.jpg" alt="food">
         </div>
         <h4> Sayur Orang Susah</h4>
         <h5> Discover a symphony of taste with our<br>handpicked favorites that promise to delight your...</h5>
