--- a/restro-kayang.html
+++ b/restro-kayang.html
@@ -7,6 +7,7 @@
     <title>restro</title>
   </head>
   <body>
+    <main>
     <section id="hero">
       <div id="begin">
         <h3>RSTKYG</h3>
@@ -23,21 +24,22 @@
     </div>
       <header>RESTO<br>KAYANG</header>
       <div id="bottom">
-        <nav>
         <div class="box box2">FRIDAY &nbsp; 09.00-22.00</div>
-        <div class="box box3">SATUDAY &nbsp; 09.00-22.00</div></nav>
+        <div class="box box3">SATUDAY &nbsp; 09.00-22.00</div>
         <p>
           Experience the rich flavours of tradition and <br />
           passion in every dish.indulge in an unforgettable<br />
           dining experience at Restro Kayang
         </p>
-        </div>
+      </div>
     </section>
  <section id="Menu">
   <h2> Indulge in our<br>Exquisite Favorites</h2>
     <div id class="next">
+      <nav>
     <h5> Discover a symphony of tastes with our hand picked<br>favorites that promise to delight your senses</h5>
      <div id class="box4">Book Online</div>
+      </nav>
    </div>
      <div id class="menu_items">
          <div id class="box5">
@@ -123,5 +125,6 @@
       </div>
     </div>
  </section>
+ </main>
   </body>
 </html>
