--- a/restro-kayang.html
+++ b/restro-kayang.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" ype="text/css" href="restro-styles.css" />
+    <link rel="stylesheet" type="text/css" href="restro-styles.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <title>restro</title>
   </head>
   <body>
@@ -20,19 +21,36 @@
               <li>Book Online</li>
             </div>
           </ul>
-        </nav>  
+  
     </div>
       <header>RESTO<br>KAYANG</header>
       <div id="bottom">
-        <div class="box box2">FRIDAY &nbsp; 09.00-22.00</div>
-        <div class="box box3">SATUDAY &nbsp; 09.00-22.00</div>
-        <p>
-          Experience the rich flavours of tradition and <br />
+        <div class="boxes">
+          <div class="box box2">FRIDAY &nbsp; 09.00-22.00</div>
+          <div class="box box3">SATUDAY &nbsp; 09.00-22.00</div>
+        </div>
+          <p>Experience the rich flavours of tradition and <br />
           passion in every dish.indulge in an unforgettable<br />
           dining experience at Restro Kayang
-        </p>
+          </p>
       </div>
     </section>
+    <div class="image-container">
+      <img src="https://i.pinimg.com/564x/2e/ea/a9/2eeaa947376d64f53e045ca76aa0e9a3.jpg" class=" image image1">
+      <img src="https://i.pinimg.com/564x/d9/81/35/d9813565a75ad06b34be9ae132b74cb8.jpg" class=" image image3">
+      <img src="https://i.pinimg.com/564x/a5/12/d1/a512d1f51eccf437d733ea952beb88b9.jpg" class=" image image1">
+     </div>
+     <div class="text">
+      <p>
+      <b>welcome to Restro Kayang, your destination for authentic<br> indonesian cuisine.Enjoy a culinary journey with dish</b>es like savory<br>reandang and delightful nasi goreng.join us for a memorable dining <br>experience where tradition meets taste
+     </P>
+     <hr>
+      </div>
+     <div class="line">
+         <b> 10,000+</b>satisfied customers
+         <b>200+</b>Menu
+          <b>95%</b>User Report Healthier
+    </div>
  <section id="Menu">
   <h2> Indulge in our<br>Exquisite Favorites</h2>
     <div id class="next">
@@ -41,6 +59,7 @@
      <div id class="box4">Book Online</div>
       </nav>
    </div>
+   
      <div id class="menu_items">
          <div id class="box5">
             <div>
@@ -118,13 +137,67 @@
         <h4> Sayur Orang Susah</h4>
         <h5> Discover a symphony of taste with our<br>handpicked favorites that promise to delight your...</h5>
         <hr>
+        
         <div id class="rating">
-            <span style="color:#FFD700;">&#9733;&#9733;&#9733;&#9733;</span><span class="star">&#x2605</span>
+            <span style="color:#FFD700;">&#9733;&#9733;&#9733;&#9733;</span><span class="star">&#x2605;</span>
             <h6>IDR 80.000</h6>
+          </div>
         </div>
       </div>
     </div>
  </section>
+<footer>
+  <section id="footer-items">
+  <div class="footer-contents">
+    <h3>RSTKYG</h3>
+    <p><a href="#">&#x2709;booking@rstkyg.com &nbsp;</a>
+    <a href="#">&#9742;(123)456-7890</a></p>
+    <div class="box box19">book online</div>
+  </div>
+
+  
+  <div class="footer-content">
+    <h4>Menu</h4>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Menu</a></li>
+    <li><a href="#">Contact us</a></li>
+  </div>
+  <div class="footer-content">
+    <h4>Others</h4>
+    <li><a href="#">Terms of service</a></li>
+    <li><a href="#">Policy service</a></li>
+    <li><a href="#">Cookie policy</a></li>
+    <li><a href="#">Partners</a></li>
+  </div>
+  <div class="footer-content">
+    <h4>Open at</h4>
+    <li><a href="#">Monday 11:00-12:00</a></li>
+    <li><a href="#">Tuesday 11:00-12:00</a></li>
+    <li><a href="#">Wednesday 11:00-12:00</a></li>
+    <li><a href="#">Thursday 11:00-12:00</a></li>
+    <li><a href="#">Friday 09:00-22:00</a></li>
+    <li><a href="#">Saturday 09:00-22:00</a></li>
+    <li><a href="#">sunday 11:00-12:00</a></li>
+  </div>
+</div>
+</section>
+<div id class="sticker">
+  <div class="icons">
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a> 
+  <p>&copy; Restrokayang All rights reserved</p>
+  </div>
+</div>
+</footer>
+
+
+
+
+
+
+
  </main>
   </body>
 </html>
