--- a/restro-kayang.html
+++ b/restro-kayang.html
@@ -53,10 +53,10 @@
     </div>
  <section id="Menu">
   <h2> Indulge in our<br>Exquisite Favorites</h2>
-    <div id class="next">
+    <div class="column">
       <nav>
     <h5> Discover a symphony of tastes with our hand picked<br>favorites that promise to delight your senses</h5>
-     <div id class="box4">Book Online</div>
+     <div class="box4">Book Online</div>
       </nav>
    </div>
    
@@ -155,7 +155,7 @@
     <div class="box box19">book online</div>
   </div>
 
-  
+  <div class="content">
   <div class="footer-content">
     <h4>Menu</h4>
     <li><a href="#">About</a></li>
@@ -180,6 +180,7 @@
     <li><a href="#">sunday 11:00-12:00</a></li>
   </div>
 </div>
+</div>
 </section>
 <div id class="sticker">
   <div class="icons">
@@ -191,13 +192,6 @@
   </div>
 </div>
 </footer>
-
-
-
-
-
-
-
  </main>
   </body>
 </html>
