--- a/restro-kayang.html
+++ b/restro-kayang.html
@@ -68,8 +68,10 @@
             <h4> Lontong Mie Sayur</h4>
             <h5> Discover a symphony of taste with our<br>handpicked favorites that promise to delight your...</h5>
             <hr>
-            <div id class="rating">
+            <div class="rating">
+              <div class="stamp">
                 <span style="color:#FFD700;">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
+                </div>
                 <h6> IDR 200.000
                 </h6>
             </div>
@@ -83,8 +85,10 @@
             <h4> Rendang Sambal Bergoyang</h4>
             <h5> Discover a symphony of taste with our<br>handpicked favorites that promise to delight your...</h5>
             <hr>
-            <div id class="rating">
+            <div  class="rating">
+              <div class="stamp">
                 <span style="color:#FFD700;">&#9733;&#9733;&#9733;&#9733;</span><span class="star">&#x2605;</span>
+                </div>
                 <h6>IDR 120.000</h6>
             </div>
         </div>
@@ -97,8 +101,10 @@
             <h4>Ikan Asam Pedas Nasar</h4>
             <h5> Discover a symphony of taste with our<br>handpicked favorites that promise to delight your...</h5>
             <hr>
-            <div id class="rating">
+            <div class="rating">
+              <div class="stamp">
                 <span style="color:#FFD700;">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
+                </div>
                 <h6>IDR 160.000</h6>
             </div>
 
@@ -111,8 +117,10 @@
         <h4>Mie Bikin Sakit</h4>
      <h5> Discover a symphony of taste with our<br>handpicked favorites that promise to delight your...</h5>
             <hr>
-            <div id class="rating">
+            <div class="rating">
+              <div class="stamp">
                 <span style="color:#FFD700;">&#9733;&#9733;&#9733;</span><span class="star">&#x2605;&#x2605;</span>
+              </div>
                 <h6>IDR 170.000</h6>
             </div>
        </div>
@@ -124,8 +132,10 @@
         <h4> Nasi Goreng Ngebor</h4>
         <h5> Discover a symphony of taste with our<br>handpicked favorites that promise to delight your...</h5>
         <hr>
-        <div id class="rating">
+        <div class="rating">
+          <div class="stamp">
             <span style="color:#FFD700;">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
+          </div>
             <h6>IDR 120.000</h6>
         </div>
       </div>
@@ -138,8 +148,10 @@
         <h5> Discover a symphony of taste with our<br>handpicked favorites that promise to delight your...</h5>
         <hr>
         
-        <div id class="rating">
+        <div class="rating">
+            <div class="stamp">
             <span style="color:#FFD700;">&#9733;&#9733;&#9733;&#9733;</span><span class="star">&#x2605;</span>
+            </div>
             <h6>IDR 80.000</h6>
           </div>
         </div>
@@ -155,7 +167,7 @@
     <div class="box box19">book online</div>
   </div>
 
-  <div class="content">
+  <div id="content">
   <div class="footer-content">
     <h4>Menu</h4>
     <li><a href="#">About</a></li>
@@ -169,27 +181,27 @@
     <li><a href="#">Cookie policy</a></li>
     <li><a href="#">Partners</a></li>
   </div>
-  <div class="footer-content">
+  <div class="footer-content1">
     <h4>Open at</h4>
-    <li><a href="#">Monday 11:00-12:00</a></li>
-    <li><a href="#">Tuesday 11:00-12:00</a></li>
-    <li><a href="#">Wednesday 11:00-12:00</a></li>
-    <li><a href="#">Thursday 11:00-12:00</a></li>
-    <li><a href="#">Friday 09:00-22:00</a></li>
-    <li><a href="#">Saturday 09:00-22:00</a></li>
-    <li><a href="#">sunday 11:00-12:00</a></li>
+    <li><a href="#">Monday&nbsp;11:00-12:00</a></li>
+    <li><a href="#">Tuesday&nbsp;11:00-12:00</a></li>
+    <li><a href="#">Wednesday&nbsp;11:00-12:00</a></li>
+    <li><a href="#">Thursday&nbsp;11:00-12:00</a></li>
+    <li><a href="#">Friday&nbsp; 09:00-22:00</a></li>
+    <li><a href="#">Saturday&nbsp;09:00-22:00</a></li>
+    <li><a href="#">sunday&nbsp;11:00-12:00</a></li>
   </div>
 </div>
 </div>
 </section>
-<div id class="sticker">
+<div  class="sticker">
   <div class="icons">
     <a href="#"><i class="fab fa-facebook"></i></a>
     <a href="#"><i class="fab fa-twitter"></i></a>
     <a href="#"><i class="fab fa-linkedin-in"></i></a>
     <a href="#"><i class="fab fa-instagram"></i></a> 
+    </div>
   <p>&copy; Restrokayang All rights reserved</p>
-  </div>
 </div>
 </footer>
  </main>
