--- a/restro-kayang.html
+++ b/restro-kayang.html
@@ -42,7 +42,7 @@
      </div>
      <div class="text">
       <p>
-      <b>welcome to Restro Kayang, your destination for authentic<br> indonesian cuisine.Enjoy a culinary journey with dish</b>es like savory<br>reandang and delightful nasi goreng.join us for a memorable dining <br>experience where tradition meets taste
+      welcome to Restro Kayang, your destination for authentic<br> indonesian cuisine.Enjoy a culinary journey with dishes like savory<br>reandang and delightful nasi goreng.join us for a memorable dining <br>experience where tradition meets taste
      </P>
      <hr>
       </div>
@@ -156,6 +156,71 @@
         </div>
       </div>
     </div>
+ </section>
+ <section id="outline">
+ <div class="true">
+  <p>"restro kayang offers an incredible taste of indonesia! the<br>the rendang and nasi goreng were delicious,and every dish<br>was made with authentic flavours.high recommend!"</p>
+  <h5>ivan guanzan(22)</h5>
+  <div class="circle">
+    <img src="https://i.pinimg.com/564x/8b/71/0e/8b710ee37ae9f60acb2ba8d57e08622d.jpg"class="image2">
+    <img src="https://i.pinimg.com/564x/68/10/79/681079af9f843cc6c87152e26c25b9c2.jpg" class="image2">
+    <img src="https://i.pinimg.com/564x/d4/44/97/d4449752cd2e1c5c708fc0b627317e8f.jpg"class="image2">
+    <img src="https://i.pinimg.com/564x/d4/44/97/d4449752cd2e1c5c708fc0b627317e8f.jpg"class="image2">
+    <img src="https://i.pinimg.com/564x/8b/71/0e/8b710ee37ae9f60acb2ba8d57e08622d.jpg"class="image2">
+    <img src="https://i.pinimg.com/564x/68/10/79/681079af9f843cc6c87152e26c25b9c2.jpg" class="image2">
+    <img src="https://i.pinimg.com/564x/d4/44/97/d4449752cd2e1c5c708fc0b627317e8f.jpg"class="image2">
+    <img src="https://i.pinimg.com/564x/d4/44/97/d4449752cd2e1c5c708fc0b627317e8f.jpg"class="image2">
+    <img src="https://i.pinimg.com/564x/8b/71/0e/8b710ee37ae9f60acb2ba8d57e08622d.jpg"class="image2">
+    <img src="https://i.pinimg.com/564x/68/10/79/681079af9f843cc6c87152e26c25b9c2.jpg" class="image2">
+    <img src="https://i.pinimg.com/564x/d4/44/97/d4449752cd2e1c5c708fc0b627317e8f.jpg"class="image2">
+    <img src="https://i.pinimg.com/564x/d4/44/97/d4449752cd2e1c5c708fc0b627317e8f.jpg"class="image2">
+    <img src="https://i.pinimg.com/564x/8b/71/0e/8b710ee37ae9f60acb2ba8d57e08622d.jpg"class="image2">
+    <img src="https://i.pinimg.com/564x/68/10/79/681079af9f843cc6c87152e26c25b9c2.jpg" class="image2">
+    <img src="https://i.pinimg.com/564x/d4/44/97/d4449752cd2e1c5c708fc0b627317e8f.jpg"class="image2">
+    <img src="https://i.pinimg.com/564x/d4/44/97/d4449752cd2e1c5c708fc0b627317e8f.jpg"class="image2">
+    <img src="https://i.pinimg.com/564x/68/10/79/681079af9f843cc6c87152e26c25b9c2.jpg" class="image2">
+    <img src="https://i.pinimg.com/564x/b2/b9/c3/b2b9c3fc4d7716075c1ac828b2a78c52.jpg" class="image2">
+    <img src="https://i.pinimg.com/564x/68/10/79/681079af9f843cc6c87152e26c25b9c2.jpg" class="image2">
+    <img src="https://i.pinimg.com/564x/d4/44/97/d4449752cd2e1c5c708fc0b627317e8f.jpg"class="image2">
+  </div>
+  <h3> Discover the flavours <br> Behind our Menu</h3>
+  <h6>explore in-depth analysis,industry news and valuable tips from<br> experts to keep you informed and ahead of the curve</h6>
+<div class="count">
+  
+  <div class="boxa">
+  <div>
+    <img src="https://i.pinimg.com/564x/02/72/eb/0272ebdbd649be669550f375355e1d2f.jpg">
+  </div>
+    <h4>journey through our<br>culinary creations</h4>
+    <h6>uncover the inspiration and passion behind<br>our dishes with exclusive insights and recepies</h6>
+</div>
+
+
+<div class="boxb">
+  <div>
+    <img src="https://i.pinimg.com/564x/cf/c5/6c/cfc56c3feafd00a65846225278ca4aef.jpg">
+  </div>
+  <h3>explore the stories of our <br>signature dishes</h3>
+  <h6>learn about the ingridents,techniques,and history that <br> make our dishes unforgetabe</h6>
+ </div>
+
+
+   <div class="boxc">
+  <div>
+    <img src="https://i.pinimg.com/564x/77/7e/e7/777ee7df431e0c6884cebf97b623dcf6.jpg">
+  </div>
+  <h3> savor the secrets of our kitchen</h3>
+  <h6> from the farms to the tables,explore the<br> journey,ingridentsand art of our culinary</h6>
+</div>
+
+<div class="boxd">
+  <div>
+    <img src="https://i.pinimg.com/564x/d7/05/82/d70582765eec3a59d90ba99852717b28.jpg">
+  </div>
+    <h4>journey through our<br>culinary creations</h4>
+    <h6>uncover the inspiration and passion behind<br>our dishes with exclusive insights and recepies</h6>
+</div>
+</div>
  </section>
 <footer>
   <section id="footer-items">
