--- a/restro-kayang.html
+++ b/restro-kayang.html
@@ -184,8 +184,15 @@
     <img src="https://i.pinimg.com/564x/d4/44/97/d4449752cd2e1c5c708fc0b627317e8f.jpg"class="image2">
   </div>
   <h3> Discover the flavours <br> Behind our Menu</h3>
+  <div class="direction">
   <h6>explore in-depth analysis,industry news and valuable tips from<br> experts to keep you informed and ahead of the curve</h6>
-<div class="count">
+  <div class="arrows">
+  <div class="left-arrow"><button class="arrow-btn left-arrow">&lt;</button> </div>
+  <div class="right-arrow"><button class="arrow-btn right-arrow">&gt;</button> </div>
+</div>
+</div>
+
+  <div class="count">
   
   <div class="boxa">
   <div>
@@ -200,7 +207,7 @@
   <div>
     <img src="https://i.pinimg.com/564x/cf/c5/6c/cfc56c3feafd00a65846225278ca4aef.jpg">
   </div>
-  <h3>explore the stories of our <br>signature dishes</h3>
+  <h4>explore the stories of our <br>signature dishes</h4>
   <h6>learn about the ingridents,techniques,and history that <br> make our dishes unforgetabe</h6>
  </div>
 
@@ -209,7 +216,7 @@
   <div>
     <img src="https://i.pinimg.com/564x/77/7e/e7/777ee7df431e0c6884cebf97b623dcf6.jpg">
   </div>
-  <h3> savor the secrets of our kitchen</h3>
+  <h4> savor the secrets of our kitchen</h4>
   <h6> from the farms to the tables,explore the<br> journey,ingridentsand art of our culinary</h6>
 </div>
 
