--- a/index.html
+++ b/index.html
@@ -3,26 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <title>restro</title>
   </head>
   <body>
     <main>
     <section id="hero">
-      <div id="begin">
-        <h3>RSTKYG</h3>
-        <nav>
-          <ul>
-            <li>About</li>
-            <li>menu</a></li>
-            <li>Contact us</li>
-            <div class="box box1">
-              <li>Book Online</li>
-            </div>
-          </ul>
-  
-    </div>
+      <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+        <i class="fas fa-bars"></i>
+      </label>
+        <label class="logo">RSTKYG</label>
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">menu</a></li>
+          <li><a href="#">Contact us</a></li>
+            <li><a class="active" href="#">Book Online</a></li>
+
+      </nav>
       <header>RESTO<br>KAYANG</header>
       <div id="bottom">
         <div class="boxes">
@@ -193,8 +194,7 @@
 </div>
 
   <div class="count">
-  
-  <div class="boxa">
+    <div>
   <div>
     <img src="https://i.pinimg.com/564x/02/72/eb/0272ebdbd649be669550f375355e1d2f.jpg">
   </div>
@@ -203,7 +203,7 @@
 </div>
 
 
-<div class="boxb">
+<div>
   <div>
     <img src="https://i.pinimg.com/564x/cf/c5/6c/cfc56c3feafd00a65846225278ca4aef.jpg">
   </div>
@@ -212,7 +212,7 @@
  </div>
 
 
-   <div class="boxc">
+   <div>
   <div>
     <img src="https://i.pinimg.com/564x/77/7e/e7/777ee7df431e0c6884cebf97b623dcf6.jpg">
   </div>
@@ -220,7 +220,7 @@
   <h6> from the farms to the tables,explore the<br> journey,ingridentsand art of our culinary</h6>
 </div>
 
-<div class="boxd">
+<div>
   <div>
     <img src="https://i.pinimg.com/564x/d7/05/82/d70582765eec3a59d90ba99852717b28.jpg">
   </div>
