--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <title>restro</title>
   </head>
+  <main>
   <body>
-    <main>
     <section id="hero">
       <nav>
         <input type="checkbox" id="check">
@@ -35,7 +35,7 @@
           dining experience at Restro Kayang
           </p>
       </div>
-    </section>
+      </section>
     <div class="image-container">
       <img src="https://i.pinimg.com/564x/2e/ea/a9/2eeaa947376d64f53e045ca76aa0e9a3.jpg" class=" image image1">
       <img src="https://i.pinimg.com/564x/d9/81/35/d9813565a75ad06b34be9ae132b74cb8.jpg" class=" image image3">
@@ -199,7 +199,7 @@
     <img src="https://i.pinimg.com/564x/02/72/eb/0272ebdbd649be669550f375355e1d2f.jpg">
   </div>
     <h4>journey through our<br>culinary creations</h4>
-    <h6>uncover the inspiration and passion behind<br>our dishes with exclusive insights and recepies</h6>
+    <p>uncover the inspiration and passion behind<br>our dishes with exclusive insights and recepies</p>
 </div>
 
 
@@ -208,7 +208,7 @@
     <img src="https://i.pinimg.com/564x/cf/c5/6c/cfc56c3feafd00a65846225278ca4aef.jpg">
   </div>
   <h4>explore the stories of our <br>signature dishes</h4>
-  <h6>learn about the ingridents,techniques,and history that <br> make our dishes unforgetabe</h6>
+  <p>learn about the ingridents,techniques,and history that <br> make our dishes unforgetabe</p>
  </div>
 
 
@@ -217,7 +217,7 @@
     <img src="https://i.pinimg.com/564x/77/7e/e7/777ee7df431e0c6884cebf97b623dcf6.jpg">
   </div>
   <h4> savor the secrets of our kitchen</h4>
-  <h6> from the farms to the tables,explore the<br> journey,ingridentsand art of our culinary</h6>
+  <p> from the farms to the tables,explore the<br> journey,ingridentsand art of our culinary</p>
 </div>
 
 <div>
@@ -225,7 +225,7 @@
     <img src="https://i.pinimg.com/564x/d7/05/82/d70582765eec3a59d90ba99852717b28.jpg">
   </div>
     <h4>journey through our<br>culinary creations</h4>
-    <h6>uncover the inspiration and passion behind<br>our dishes with exclusive insights and recepies</h6>
+    <p>uncover the inspiration and passion behind<br>our dishes with exclusive insights and recepies</p>
 </div>
 </div>
  </section>
@@ -275,6 +275,6 @@
   <p>&copy; Restrokayang All rights reserved</p>
 </div>
 </footer>
- </main>
-  </body>
+</body>
+ </main> 
 </html>
